--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME=root
 DB_PASSWORD=root
-DB_SERVER=127.0.0.1:3306
+DB_SERVER=track-pandemic:us-central1:my-instance
 DATABASE_NAME=pandemic_tracker
-SQLALCHEMY_DATABASE_URI=mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_SERVER}/${DATABASE_NAME}
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://${DB_USERNAME}:${DB_PASSWORD}@/${DATABASE_NAME}?unix_socket=/cloudsql/${DB_SERVER}
 FLASK_ENV=development
