--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ SQLAlchemy==1.3.16
 flask-marshmallow==0.12.0 
 Flask-SQLAlchemy==2.4.1  
 marshmallow-sqlalchemy==0.23.0 
-mysqlclient==1.4.6  
 python-dotenv==0.13.0 
+pymysql=0.9.3
