--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ flask-marshmallow==0.12.0
 Flask-SQLAlchemy==2.4.1  
 marshmallow-sqlalchemy==0.23.0 
 python-dotenv==0.13.0 
-pymysql=0.9.3
+pymysql==0.9.3
