--- a/notification-service/.env
+++ b/notification-service/.env
@@ -1,6 +1,8 @@
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_SERVER=track-pandemic:us-central1:my-instance
+DEV_DB_SERVER=127.0.0.1:3306
 DATABASE_NAME=pandemic_tracker
 SQLALCHEMY_DATABASE_URI=mysql+pymysql://${DB_USERNAME}:${DB_PASSWORD}@/${DATABASE_NAME}?unix_socket=/cloudsql/${DB_SERVER}
-FLASK_ENV=development
+DEV_SQLALCHEMY_DATABASE_URI=mysql+pymysql://${DB_USERNAME}:${DB_PASSWORD}@${DEV_DB_SERVER}/${DATABASE_NAME}
+FLASK_ENV=production
