--- a/user-service/.env
+++ b/user-service/.env
@@ -1,8 +1,8 @@
 DB_USERNAME=root
 DB_PASSWORD=root
-_DB_SERVER=track-pandemic:us-central1:my-instance
-DB_SERVER=127.0.0.1:3306
+DB_SERVER=track-pandemic:us-central1:my-instance
+DEV_DB_SERVER=127.0.0.1:3306
 DATABASE_NAME=pandemic_tracker
-_SQLALCHEMY_DATABASE_URI=mysql+pymysql://${DB_USERNAME}:${DB_PASSWORD}@/${DATABASE_NAME}?unix_socket=/cloudsql/${DB_SERVER}
-SQLALCHEMY_DATABASE_URI=mysql+pymysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_SERVER}/${DATABASE_NAME}
-FLASK_ENV=development
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://${DB_USERNAME}:${DB_PASSWORD}@/${DATABASE_NAME}?unix_socket=/cloudsql/${DB_SERVER}
+DEV_SQLALCHEMY_DATABASE_URI=mysql+pymysql://${DB_USERNAME}:${DB_PASSWORD}@${DEV_DB_SERVER}/${DATABASE_NAME}
+FLASK_ENV=production
