--- a/location-service/app.yaml
+++ b/location-service/app.yaml
@@ -1,7 +1,11 @@
 service: location
-runtime: python37
+runtime: python
 env: flex
 entrypoint: gunicorn -b :$PORT main:app
-
+beta_settings:
+        cloud_sql_instances: track-pandemic:us-central1:my-instance
 manual_scaling:
   instances: 1
+
+runtime_config:
+    python_version: 3
