--- a/notification-service/requirements.txt
+++ b/notification-service/requirements.txt
@@ -6,3 +6,5 @@ marshmallow-sqlalchemy==0.23.0
 python-dotenv==0.13.0 
 pymysql==0.9.3
 gunicorn==20.0.4
+google-cloud-tasks==1.5.0
+googleapis-common-protos==1.51.0
