updated services names and included sending to queue in case of infection

--- a/email-service/app.yaml
+++ b/email-service/app.yaml
@@ -1,4 +1,4 @@
-service: default
+service: email-notification-service
 runtime: python
 env: flex
 entrypoint: gunicorn -b :$PORT --threads=4 main:app
